test/cases/arrays/sizeof_incomplete_before_init.c
// RUN: %check -e %s
main()
{
	int x[] = { sizeof x }; // CHECK: error: sizeof incomplete type int[]
}
